crates/schema/tests/compile_fail/number_no_multiline.rs
fn main() {
    let _ = nebula_schema::Field::number("count").multiline();
}
